added light mode and dark mode

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
         "newtab": "memetab.html"
     },
     "permissions": [
-        "bookmarks"
+        "tabs",
+        "bookmarks",
+        "history"
     ],
     "content_scripts" : [
         {
